[project]
name = "queuebot"
version = "1.4.14.dev4+g09d451e"
description = ""
authors = [
    { "name"= "Sarioah","email"= "3851003+Sarioah@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
# irc 20.5 fights with importlib-resources on freeze
# tempora 5.7+ pulls in dateutil which causes warnings on freeze
dependencies = [
  "keyring>=25.7.0,<26",
  "colorama>=0.4.6,<0.5",
  "readchar>=4.2.1,<5",
  "aiohttp>=3.13.3,<4",
  "pywin32>=311,<312",
  "irc==20.4.0",
  "tempora>=5.6,<5.7",
  "packaging>=26.0",
]

[dependency-groups]
dev = [
  "black>=25.12.0,<26",
  "nuitka>=2.8.9,<3",
  "coverage>=7.13.1,<8",
  "pytest>=9.0.2",
  "pytest-mock>=3.15.1",
  "pyoxidizer>=0.24.0",
]

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
queuebot = "queuebot.main:main"
